[package]
name = "bn"
version = "0.4.3"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/zcash/bn"
repository = "https://github.com/zcash/bn"
license = "MIT OR Apache-2.0"

[[bench]]
name = "api"

[dependencies]
rand = "0.6"
byteorder = "1.0"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies.bincode]
version = "1.0"
default-features = false

[dev-dependencies.hex]
version = "0.3.2"

[dev-dependencies.lazy_static]
version = "1.0"

[features]
default = ["std"]
std = []